<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSignupClick"
        android:layout_alignParentBottom="true"
        android:text="@string/signup" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_signup"
        android:layout_below="@id/toolbar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                style="@style/text_label_required"
                android:text="@string/name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/text_label"
                android:text="@string/phone" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/text_label_required"
                android:text="@string/email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/text_label"
                android:text="@string/major" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/text_label"
                android:text="@string/address" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/text_label"
                android:text="@string/address" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/text_label"
                android:text="@string/address" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/text_label"
                android:text="@string/address" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </ScrollView>

</RelativeLayout>